
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {scalar_t__ h_addr; } ;
typedef TYPE_1__ hostent ;


 unsigned long INADDR_NONE ;
 TYPE_1__* gethostbyname (char*) ;
 unsigned long inet_addr (char*) ;

unsigned long gethost(char *targethost)
{
unsigned long host=0;
hostent *phost=((void*)0);


host=inet_addr(targethost);
if(host==INADDR_NONE)
{
   if((phost=gethostbyname(targethost))==((void*)0))
      return 0;
   host=*(unsigned long*)phost->h_addr;
}

return host;
}
